# AgentProxyX

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  sitecustomize.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
agentproxyx/: __init__.py
configs/: agentproxyx.default.json
docs/: ARCHITECTURE.md  LAUNCH.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_v0.1.0.md
src/agentproxyx/: __init__.py  agents.py  cache.py  cli.py  config.py  cost.py  dashboard.py  firewall.py  mcp.py  proxy.py  replay.py  secrets.py
src/agentproxyx/web/: app.js  index.html  styles.css
tests/: test_agents.py  test_cache.py  test_cost.py  test_firewall.py  test_mcp.py  test_secrets.py
