[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentproxyx"
version = "0.1.0"
description = "Local security and cost-control gateway for AI coding agents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "AgentProxyX Contributors" }
]
keywords = [
  "ai-agents",
  "llm",
  "proxy",
  "mcp",
  "security",
  "prompt-caching",
  "developer-tools"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Software Development"
]
dependencies = []

[project.urls]
Homepage = "https://github.com/your-org/agentproxyx"
Repository = "https://github.com/your-org/agentproxyx"
Issues = "https://github.com/your-org/agentproxyx/issues"

[project.scripts]
agentproxyx = "agentproxyx.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agentproxyx = ["web/*.html", "web/*.css", "web/*.js"]

